[gd_scene load_steps=16 format=2]

[ext_resource path="res://menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/hack/Hack-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menus/InputMapper.tscn" type="PackedScene" id=3]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.313726, 0.0352941, 0, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_color = Color( 0.462745, 0.462745, 0.462745, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background"]
environment = SubResource( 1 )

[node name="Camera" type="Camera" parent="Background"]

[node name="Panels" type="Node" parent="."]

[node name="Start" type="Control" parent="Panels"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )

[node name="Label_Title" type="Label" parent="Panels/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = -210.0
custom_fonts/font = SubResource( 4 )
text = "Keress"
align = 1
valign = 1

[node name="Button_Continue" type="Button" parent="Panels/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -161.0
margin_right = 54.0
margin_bottom = -125.0
focus_neighbour_top = NodePath("../Button_Quit")
focus_neighbour_bottom = NodePath("../Button_New_Game")
focus_next = NodePath("../Button_New_Game")
focus_previous = NodePath("../Button_Quit")
text = "Continue"
flat = true

[node name="Button_New_Game" type="Button" parent="Panels/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -111.0
margin_right = 54.0
margin_bottom = -75.0
focus_neighbour_top = NodePath("../Button_Continue")
focus_neighbour_bottom = NodePath("../Button_Settings")
focus_next = NodePath("../Button_Settings")
focus_previous = NodePath("../Button_Continue")
text = "New Game"
flat = true

[node name="Button_Settings" type="Button" parent="Panels/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -61.0
margin_right = 54.0
margin_bottom = -25.0
focus_neighbour_top = NodePath("../Button_New_Game")
focus_neighbour_bottom = NodePath("../Button_Quit")
focus_next = NodePath("../Button_Quit")
focus_previous = NodePath("../Button_New_Game")
text = "Settings"
flat = true

[node name="Button_Quit" type="Button" parent="Panels/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -11.0
margin_right = 54.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../Button_Settings")
focus_neighbour_bottom = NodePath("../Button_Continue")
focus_next = NodePath("../Button_Continue")
focus_previous = NodePath("../Button_Settings")
text = "Quit"
flat = true

[node name="Settings" type="Panel" parent="Panels"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label_Title" type="Label" parent="Panels/Settings"]
margin_right = 1280.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 5 )
text = "Settings"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panels/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 140.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panels/Settings/ScrollContainer"]
margin_right = 324.0
margin_bottom = 366.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panels/Settings/ScrollContainer/HBoxContainer"]
margin_right = 324.0
margin_bottom = 366.0

[node name="Label_Mouse_Sensitivity" type="Label" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 324.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 6 )
text = "Mouse Sensitivity"

[node name="HSlider_Mouse_Sensitivity" type="HSlider" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 324.0
margin_bottom = 56.0
focus_neighbour_bottom = NodePath("../HSlider_Joypad_Sensitivity")
focus_next = NodePath("../HSlider_Joypad_Sensitivity")
focus_previous = NodePath("../../../../Button_Back")
tick_count = 10

[node name="Label_Joypad_Sensitivity" type="Label" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 324.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 7 )
text = "Joypad Sensitivity"

[node name="HSlider_Joypad_Sensitivity" type="HSlider" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 324.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../HSlider_Mouse_Sensitivity")
focus_neighbour_bottom = NodePath("../HSlider_Field_of_View")
focus_next = NodePath("../HSlider_Field_of_View")
focus_previous = NodePath("../HSlider_Mouse_Sensitivity")

[node name="Label_Field_of_View" type="Label" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 324.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 7 )
text = "Field of View"

[node name="HSlider_Field_of_View" type="HSlider" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 324.0
margin_bottom = 176.0
focus_neighbour_top = NodePath("../HSlider_Joypad_Sensitivity")
focus_neighbour_bottom = NodePath("../CheckButton_VSync")
focus_next = NodePath("../CheckButton_VSync")
focus_previous = NodePath("../HSlider_Joypad_Sensitivity")
min_value = 50.0
max_value = 150.0
step = 10.0
value = 100.0
tick_count = 3

[node name="CheckButton_VSync" type="CheckButton" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 324.0
margin_bottom = 224.0
focus_neighbour_top = NodePath("../HSlider_Field_of_View")
focus_neighbour_bottom = NodePath("../CheckButton_Fullscreen")
focus_next = NodePath("../CheckButton_Fullscreen")
focus_previous = NodePath("../HSlider_Field_of_View")
custom_fonts/font = SubResource( 8 )
text = "V-Sync"

[node name="CheckButton_Fullscreen" type="CheckButton" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 324.0
margin_bottom = 272.0
focus_neighbour_top = NodePath("../CheckButton_VSync")
focus_neighbour_bottom = NodePath("../CheckButton_Debug")
focus_next = NodePath("../CheckButton_Debug")
focus_previous = NodePath("../CheckButton_VSync")
custom_fonts/font = SubResource( 9 )
text = "Fullscreen"

[node name="CheckButton_Debug" type="CheckButton" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 324.0
margin_bottom = 320.0
focus_neighbour_top = NodePath("../CheckButton_Fullscreen")
focus_neighbour_bottom = NodePath("../Button_Controls")
focus_next = NodePath("../Button_Controls")
focus_previous = NodePath("../CheckButton_Fullscreen")
custom_fonts/font = SubResource( 10 )
text = "Debug Mode"

[node name="Button_Controls" type="Button" parent="Panels/Settings/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 324.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 11 )
text = "Controls"

[node name="Button_Back" type="Button" parent="Panels/Settings"]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 60.0
focus_neighbour_bottom = NodePath("../ScrollContainer/HBoxContainer/VBoxContainer/HSlider_Mouse_Sensitivity")
focus_next = NodePath("../ScrollContainer/HBoxContainer/VBoxContainer/HSlider_Mouse_Sensitivity")
focus_previous = NodePath("../ScrollContainer/HBoxContainer/VBoxContainer/CheckButton_Debug")
custom_fonts/font = SubResource( 12 )
text = "< Back"

[node name="InputMapper" parent="Panels" instance=ExtResource( 3 )]
visible = false
